// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EmployeeCard > edit button > matches snapshot with onEdit handler 1`] = `
<DocumentFragment>
  <div
    class="_card_bdb005"
    data-testid="employee-card"
  >
    <button
      aria-label="Edit Alice Johnson"
      class="_editBtn_bdb005"
      type="button"
    >
      <svg
        aria-hidden="true"
        fill="none"
        height="14"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M11 4H4a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2v-7"
        />
        <path
          d="M18.5 2.5a2.121 2.121 0 0 1 3 3L12 15l-4 1 1-4 9.5-9.5z"
        />
      </svg>
    </button>
    <div
      class="_header_bdb005"
      data-testid="card-header"
    >
      <div
        class="_avatar_bdb005"
      >
        AJ
      </div>
      <div
        class="_headerInfo_bdb005"
      >
        <h3
          class="_name_bdb005"
        >
          Alice Johnson
        </h3>
        <p
          class="_jobTitle_bdb005"
        >
          Software Engineer
        </p>
      </div>
      <div
        data-testid="card-footer"
      >
        <span
          class="badge badge--full-time"
        >
          full-time
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmployeeCard > onClick > matches snapshot with onClick handler 1`] = `
<DocumentFragment>
  <div
    class="_card_bdb005"
    data-testid="employee-card"
    style="cursor: pointer;"
  >
    <div
      class="_header_bdb005"
      data-testid="card-header"
    >
      <div
        class="_avatar_bdb005"
      >
        AJ
      </div>
      <div
        class="_headerInfo_bdb005"
      >
        <h3
          class="_name_bdb005"
        >
          Alice Johnson
        </h3>
        <p
          class="_jobTitle_bdb005"
        >
          Software Engineer
        </p>
      </div>
      <div
        data-testid="card-footer"
      >
        <span
          class="badge badge--full-time"
        >
          full-time
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmployeeCard > snapshot > matches snapshot for a contract employee 1`] = `
<DocumentFragment>
  <div
    class="_card_bdb005"
    data-testid="employee-card"
  >
    <div
      class="_header_bdb005"
      data-testid="card-header"
    >
      <div
        class="_avatar_bdb005"
      >
        AJ
      </div>
      <div
        class="_headerInfo_bdb005"
      >
        <h3
          class="_name_bdb005"
        >
          Alice Johnson
        </h3>
        <p
          class="_jobTitle_bdb005"
        >
          Software Engineer
        </p>
      </div>
      <div
        data-testid="card-footer"
      >
        <span
          class="badge badge--contract"
        >
          contract
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmployeeCard > snapshot > matches snapshot for a full-time employee 1`] = `
<DocumentFragment>
  <div
    class="_card_bdb005"
    data-testid="employee-card"
  >
    <div
      class="_header_bdb005"
      data-testid="card-header"
    >
      <div
        class="_avatar_bdb005"
      >
        AJ
      </div>
      <div
        class="_headerInfo_bdb005"
      >
        <h3
          class="_name_bdb005"
        >
          Alice Johnson
        </h3>
        <p
          class="_jobTitle_bdb005"
        >
          Software Engineer
        </p>
      </div>
      <div
        data-testid="card-footer"
      >
        <span
          class="badge badge--full-time"
        >
          full-time
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`EmployeeCard > snapshot > matches snapshot for a part-time employee with null department 1`] = `
<DocumentFragment>
  <div
    class="_card_bdb005"
    data-testid="employee-card"
  >
    <div
      class="_header_bdb005"
      data-testid="card-header"
    >
      <div
        class="_avatar_bdb005"
      >
        AJ
      </div>
      <div
        class="_headerInfo_bdb005"
      >
        <h3
          class="_name_bdb005"
        >
          Alice Johnson
        </h3>
        <p
          class="_jobTitle_bdb005"
        >
          Software Engineer
        </p>
      </div>
      <div
        data-testid="card-footer"
      >
        <span
          class="badge badge--part-time"
        >
          part-time
        </span>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
